webstore-app/overlays/dev/platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: platform
