webstore-app/overlays/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-buffers: "8 32k"
    nginx.org/proxy-buffer-size: "64k"
    nginx.org/location-snippets: |
     rewrite /admin https://$(VC_PLATFORM_SERVICE)-$(VC_NAMESPACE).govirto.com permanent;
spec:
  # tls:
  #   - hosts: 
  #     - webstore-platform.dev.govirto.com
  #     secretName: webstore-platform-tls
  #   - hosts:   
  #     - webstore-storefront.dev.govirto.com
  #     secretName: webstore-storefront-tls
  rules:
  - host: $(VC_STOREFRONT_SERVICE)-$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: $(VC_PLATFORM_SERVICE)-$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
